# water-simulation

./: .gitignore  CMakeLists.txt  README.md
documentation/: keybinds.txt
include/glad/: glad.h
src/: assert_.c  assert_.h  board.c  board.h  circle_creator.c  circle_creator.h  constants.h  glad.c  keyboard.c  keyboard.h  main.c  min_max.h  obstacle_creator.c  obstacle_creator.h
tests/: main.c
